[package]
name = "logistic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy_mod_picking = { version = "0.15.0", default-features = false, features = [
    "backend_egui",
    "backend_raycast",
    "bevy_egui",
    "bevy_picking_egui",
    "bevy_picking_raycast",
] }
bevy_egui = "0.21.0"
leafwing-input-manager = { version = "0.10.0", features = ["egui"] }
